# Autonomous-Job-Applier

./: .gitignore  .mcp.json  README.md  issues.md  main.py  pyproject.toml
knowledge/: achievements.md  application_answers.md  education.md  job_preferences.md  personal_information.md  professional_profile.md  projects.md  skills.md  work_experience.md
large_tool_results/: call_00_OqX690jvUQH5pHNbEhQz8185  call_00_e3mb5P7mG3MYyEIiaBcV5168  call_00_nROBJuX1sB5pfcohY6H30015  call_00_siuRjxrVW80FAJoy3MzL4314  call_00_zNlzaIrioUpXoTwX9GlY6364
memory/: AGENT.md
skills/applier/: SKILL.md
skills/applier/references/: Naukri.md
skills/orchestrator/: SKILL.md
skills/orchestrator/references/: application_navigation.md
skills/search-jobs/: SKILL.md
src/: agent.py  prompt.py  terminal.py
src/middleware/: localcontext.py  logger.py  stoponloop.py
src/tools/: bash.py  evaluator.py  mcp.py
