[project]
name = "browser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anchorbrowser>=0.11.3",
    "deepagents>=0.6.12",
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
]
